hphp/hack/test/typecheck/vec_or_dict2.php
<?hh

function tk(vec<int> $v): vec_or_dict<string, int> {
  return $v;
}

function tv(vec<int> $v): vec_or_dict<string> {
  return $v;
}
